# maki

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: app_configs.cpp.812DA9B12B67E885.idx  app_configs.h.D134D18414DE8839.idx  behaviour_dialog.cpp.234D52D03188EBB2.idx  behaviour_dialog.h.3CBCA4D2734459CD.idx  behaviour_item.cpp.C34DD8B05D9015CD.idx  behaviour_item.h.D07CA9D62D311F32.idx  behaviour_menu.cpp.E41A6AF6BB640A5F.idx  behaviour_menu.h.B46A1CFF00DDEE6B.idx  canvas.cpp.B85FA9E8409914BF.idx  canvas.h.10758CC40A3DD784.idx  canvas_view.cpp.FCAB782346E412BF.idx  canvas_view.h.ED57ECF8710B9A1D.idx  config.cpp.0BDC246B4EE4A195.idx  config.h.75315DBE2FF8DB9C.idx  config_base.cpp.E621C55FFB8E378D.idx  config_base.h.C59B3E2A4D5EA521.idx  config_table.cpp.ED71C0CAD0537117.idx  config_table.h.AFD28773C84FDA77.idx  connection.cpp.95FAC73F44B99139.idx  connection.h.02359117015E2E1A.idx  connector.cpp.DA9CBD22AEA0CC42.idx  connector.h.F5E1D380FD73F3A8.idx  draggable.cpp.20CC72B7CDD1513C.idx  draggable.h.8A87403D86F2AD14.idx  fields_menu.cpp.1663E799D0195D70.idx  fields_menu.h.4DA993A06C5736B1.idx  file_system_helpers.cpp.730307F28ACC7FEE.idx  file_system_helpers.h.F2A1326974ED6854.idx  generator.cpp.CE48735E452FF689.idx  generator.h.D67E9C8E54810CB4.idx  generator_plugin.h.1583061CAEEDF6BD.idx  generator_plugin.h.ED073E5A389D664D.idx  inode.h.2F23D689B1836DA5.idx  inode.h.876766D1503D4E2A.idx  json.cpp.0C6DFB1D2D19E04D.idx  json.h.33A058C35CE6E962.idx  json_plugin.cpp.19F785A3378F038A.idx  json_plugin.h.AA065A1F73D173D4.idx  keys.h.21896B45324FF737.idx  library_container.cpp.CCA95DE94C27A52F.idx  (+35 more)
.github/workflows/: build-dev-image.yaml  bump-version.yaml  ci.yml  release.yml
app/: CMakeLists.txt  assets.qrc  main.cpp
app/assets/: config.json  style.css  style.qss
app/assets/themes/: CatppuccinMocha.theme  MSDark.theme  SolarizedDark.theme  SolarizedLight.theme  TokyoNight.theme  dark.theme  dracula.theme  gruvbox.theme  light.theme  monokai.theme  nord.theme
app/common/: CMakeLists.txt  app_configs.cpp  app_configs.h  config.cpp  config.h  config_base.cpp  config_base.h  event_config.cpp  event_config.h  inode.h  json.cpp  json.h  keys.h  process_runner.cpp  process_runner.h  property_config.cpp  property_config.h  style_helpers.cpp  style_helpers.h  theme.cpp  theme.h  types.cpp  types.h
app/compiler/: dezyne_generator.cpp  dezyne_generator.h  generator.cpp  generator.h  generator_plugin.h  parser.h
app/elements/: config.cpp  config.h  connection.cpp  connection.h  connector.cpp  connector.h  draggable.cpp  draggable.h  element.cpp  element.h  flow.cpp  flow.h  inode.h  movable.cpp  movable.h  node.cpp  node.h  node_base.cpp  node_base.h  save_info.cpp  save_info.h  transition.cpp  transition.h
app/libraries/: generic.json  generic_behaviour.json  generic_structure.json  grpc.json  math.json  mission.json  ros2.json  serial.json  utilities.json
app/plugins/: CMakeLists.txt
app/plugins/dezyne/: dezyne_generator.h
app/plugins/rozyne/: CMakeLists.txt  rozyne_generator.cpp  rozyne_generator.h  rozyne_generator.json
app/system/: behaviour_canvas.cpp  behaviour_canvas.h  canvas.cpp  canvas.h  canvas_view.cpp  canvas_view.h  config_table.cpp  config_table.h  editor copy.ui  editor.ui  generator_plugin.h  library_container.cpp  library_container.h  main_window.cpp  main_window.h  main_window_layout.cpp  main_window_layout.h  plugin_manager.cpp  plugin_manager.h  process_tab.cpp  process_tab.h  save_handler.cpp  save_handler.h  server_tab.cpp  server_tab.h  structure_canvas.cpp  structure_canvas.h
app/view/: canvas.cpp  canvas.h  config_table.h  connection.cpp  connection.h  connector.cpp  connector.h  editor.ui  library_container.cpp  library_container.h  main_window.cpp  main_window.h  node.cpp  node.h
app/widgets/: behaviour_dialog.cpp  behaviour_dialog.h  behaviour_item.cpp  behaviour_item.h  behaviour_menu.cpp  behaviour_menu.h  dynamic_control.cpp  dynamic_control.h  fields_menu.cpp  fields_menu.h  flow_dialog.cpp  flow_dialog.h  menu_base.h  properties_menu.cpp  properties_menu.h  settings_dialog.cpp  settings_dialog.h  settings_manager.cpp  settings_manager.h  tree_menu.cpp  tree_menu.h
app/widgets/properties/: fields_menu.cpp  fields_menu.h  properties_menu.cpp  properties_menu.h
app/widgets/structure/: event_dialog.cpp  event_dialog.h  field_dialog.cpp  field_dialog.h  flow_menu.cpp  flow_menu.h  system_menu.cpp  system_menu.h
cmake/: deploy-linux.cmake  patch_compile_commands.cmake  toolchain-mingw64.cmake
diagrams/: test.json  worldmodel.lcp
docker/: Dockerfile
scripts/: build.sh  install_dezyne.sh  release.sh
scripts/linux/: build.sh  release.sh
scripts/windows/: build.ps1  release.ps1  setup.ps1
